[tool.poetry]
name = "pyte-prism"
version = "0.0.1"
description = "A Page Object Model DSL for Python, inspired by Ruby SitePrism"
readme = "README.rst"
authors = ["Shoma FUKUDA <fkshom+pypi@gmail.com>"]
homepage = "https://github.com/fkshom"
repository = "https://github.com/fkshom/pyte-prism"
documentation = "https://github.com/fkshom/pyte-prism/wiki"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    'Programming Language :: Python :: 3',
    "Programming Language :: Python :: 3.7",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
uritemplate = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
readme_renderer = "^26.0"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
